[package]
name = "lookup"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A CLI tool to fetch dictionary definitions and Wikipedia summaries"
repository = "https://github.com/yourusername/lookup"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
